<resources>
    <string name="app_name">Noter</string>

    <string name="sort_by">Sort By</string>
    <string name="sort_by_date">Sort By Date</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="add_note">New Note</string>

    <string name="note_hint">Note</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="notes">Notes</string>
    <string name="reminder">Reminder</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="change_note_type">Change note type</string>
    <string name="pick_color">Pick Color</string>

    <string name="empty_note_text">Nothing!\nYour note list is empty.</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_all_notes_text">Do you want to delete all notes ?</string>
    <string name="delete_note_text">Do you want to delete</string>
    <string name="undo">Undo</string>
    <string name="deleted_successful">Deleted successful</string>

    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="export_file_name">Export Backup.json</string>
    <string name="input_data_error">Input all require data</string>

    <string name="app_settings">App Settings</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="data">Data</string>
    <string name="export_note">Export Note Data</string>
    <string name="import_note">Import Note Data</string>
    <string name="about">About</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="share_this_app">Share This App</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="contact_us">Contact Us</string>

    <string name="import_key">import_key</string>
    <string name="export_key">export_key</string>
    <string name="send_feedback_key">send_feedback_key</string>
    <string name="share_this_app_key">share_this_app_key</string>
    <string name="rate_this_app_key">rate_this_app_key</string>
    <string name="language_key">language_key</string>
    <string name="dark_mode_key">dark_mode_key</string>
    <string name="contact_us_key">contact_us_key</string>
    <string name="add_list_item">Add List Item</string>

    <string name="share_text">"I found a brilliant note app called Noter. You can download from this link: "</string>
    <string name="support_mail">eneskayiklik@gmail.com</string>

    <string name="take_note">Take Note</string>
    <string name="record_voice">Record Voice</string>
    <string name="take_photo">Take Photo</string>

</resources>