<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/app_settings">
        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="@string/dark_mode_key"
            app:title="@string/dark_mode" />
        <DropDownPreference
            android:entryValues="@array/languages"
            app:entries="@array/languages"
            app:iconSpaceReserved="false"
            app:key="@string/language_key"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/data">
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/export_key"
            app:title="@string/export_note" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/import_key"
            app:title="@string/import_note" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about">
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/send_feedback_key"
            app:title="@string/send_feedback" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/share_this_app_key"
            app:title="@string/share_this_app" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/rate_this_app_key"
            app:title="@string/rate_this_app" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/contact_us_key"
            app:title="@string/contact_us" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>