<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.nambimobile.widgets.efab.ExpandableFabLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nambimobile.widgets.efab.ExpandableFab
            style="@style/AddNoteFabStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_fab"
            app:efab_orientation="portrait" />

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/btnAddNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_pen"
            app:fab_orientation="portrait"
            app:label_text="@string/take_note" />

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/btnAddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_cam"
            app:fab_orientation="portrait"
            app:label_text="@string/take_photo" />

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/btnAddVoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_mic"
            app:fab_orientation="portrait"
            app:label_text="@string/record_voice" />
    </com.nambimobile.widgets.efab.ExpandableFabLayout>
</layout>